feat: add footer, header (without mobile menu) and form

--- a/source/pug/components/_footer.pug
+++ b/source/pug/components/_footer.pug
@@ -1,2 +1,45 @@
 footer.footer
-  .footer-container.container
+  .footer__row.container
+    .footer-col.footer-col-1
+      .footer-title Контактная информация
+      a(href="tel:+79959653003").footer__item
+        <svg class="footer__icon footer__icon-1" width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M18.9746 19.9693C17.0202 21.9236 12.0153 20.0873 7.79578 15.8677C3.57623 11.6482 1.7399 6.64325 3.69421 4.68893L4.98098 3.40216C5.8693 2.51383 7.33305 2.53731 8.25034 3.45461L10.2434 5.4477C11.1607 6.36499 11.1842 7.82874 10.2959 8.71706L10.0195 8.99345C9.53988 9.47307 9.49295 10.2468 9.93861 10.7868C10.3685 11.3078 10.8319 11.8266 11.3344 12.3291C11.8369 12.8316 12.3557 13.295 12.8766 13.7249C13.4167 14.1705 14.1904 14.1236 14.67 13.644L14.9464 13.3676C15.8347 12.4793 17.2985 12.5028 18.2158 13.4201L20.2089 15.4131C21.1262 16.3304 21.1496 17.7942 20.2613 18.6825L18.9746 19.9693Z" stroke="currentColor" stroke-width="2"></path>
+        <path d="M17.539 8.75071C17.295 8.15553 16.9314 7.5979 16.4481 7.11463C15.9921 6.65865 15.47 6.30918 14.9125 6.06622" stroke="currentColor" stroke-width="2" stroke-linecap="round"></path>
+        <path d="M14.9125 2.66341C16.2472 3.14691 17.4994 3.92365 18.5694 4.99364C19.6662 6.09049 20.4549 7.37883 20.9355 8.75113" stroke="currentColor" stroke-width="2" stroke-linecap="round"></path>
+        </svg>
+        .footer__text +7 (995) 965-30-03
+      a(href="https://2gis.ru/tomsk/firm/70000001036166212?m=84.982633%2C56.466496%2F16" target="_blank").footer__item
+        <svg class="footer__icon footer__icon-2" width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M13.3105 19.804L13.771 20.6917L13.771 20.6917L13.3105 19.804ZM12.5145 19.804L12.054 20.6917L12.054 20.6917L12.5145 19.804ZM18.9125 11C18.9125 13.1458 17.8204 14.9159 16.4575 16.2906C15.0955 17.6644 13.5467 18.555 12.8501 18.9163L13.771 20.6917C14.5573 20.2838 16.3095 19.2805 17.8778 17.6987C19.4451 16.1178 20.9125 13.8706 20.9125 11H18.9125ZM12.9125 5C16.2262 5 18.9125 7.68629 18.9125 11H20.9125C20.9125 6.58172 17.3308 3 12.9125 3V5ZM6.91251 11C6.91251 7.68629 9.5988 5 12.9125 5V3C8.49423 3 4.91251 6.58172 4.91251 11H6.91251ZM12.9749 18.9163C12.2783 18.555 10.7295 17.6644 9.36753 16.2906C8.00461 14.9159 6.91251 13.1458 6.91251 11H4.91251C4.91251 13.8706 6.37991 16.1178 7.94724 17.6987C9.5155 19.2805 11.2677 20.2838 12.054 20.6917L12.9749 18.9163ZM12.8501 18.9163C12.8639 18.9091 12.8858 18.9023 12.9125 18.9023C12.9392 18.9023 12.9611 18.9091 12.9749 18.9163L12.054 20.6917C12.5956 20.9726 13.2294 20.9726 13.771 20.6917L12.8501 18.9163ZM14.9125 11C14.9125 12.1046 14.0171 13 12.9125 13V15C15.1216 15 16.9125 13.2091 16.9125 11H14.9125ZM12.9125 9C14.0171 9 14.9125 9.89543 14.9125 11H16.9125C16.9125 8.79086 15.1216 7 12.9125 7V9ZM10.9125 11C10.9125 9.89543 11.8079 9 12.9125 9V7C10.7034 7 8.91251 8.79086 8.91251 11H10.9125ZM12.9125 13C11.8079 13 10.9125 12.1046 10.9125 11H8.91251C8.91251 13.2091 10.7034 15 12.9125 15V13Z" fill="currentColor"></path>
+        </svg>
+        .footer__text Фрунзе 20 / Белинского 7 <br> Томск, Томская обл. (посмотреть на карте)
+      .line
+      .footer-title Мы в соц сетях
+      .footer-socials.socials
+        a(href="https://www.youtube.com/channel/UC9O-RlVMSnHv5o2kL5QciIw" target="_blank").socials__link
+          img(src="/assets/img/telegram.svg", alt="YouTube").socials__icon
+        a(href="https://www.youtube.com/channel/UC9O-RlVMSnHv5o2kL5QciIw" target="_blank").socials__link
+          img(src="/assets/img/telegram.svg", alt="YouTube").socials__icon
+        a(href="https://www.youtube.com/channel/UC9O-RlVMSnHv5o2kL5QciIw" target="_blank").socials__link
+          img(src="/assets/img/telegram.svg", alt="YouTube").socials__icon
+        a(href="https://www.youtube.com/channel/UC9O-RlVMSnHv5o2kL5QciIw" target="_blank").socials__link
+          img(src="/assets/img/telegram.svg", alt="YouTube").socials__icon
+    .footer-col.footer-col-2
+      .footer-title Направления работы
+      ul.footer-menu
+        li.menu-item
+          a(href="") Суицидальное поведение/самоповреждение
+        li.menu-item
+          a(href="") Расстройства пищевого поведения
+        li.menu-item 
+          a(href="") Обучение специалистов
+        li.menu-item.btn-menu.footer-btn
+          a(href="") Все направления
+    .footer-col.footer-col-3
+      .footer-title Наша цель -
+      .footer-description оказывать профессиональную помощь по восстановлению и поддержанию психического здоровья и психологического благополучия, применяя в работе современные методы и концепции психологии, признанные и опробованные во всём Мире.
+  .copyright
+    .container
+      .copyright__text © 2018 - <span class="current-year"></span> Центр научно - практической психологии "DIALECTICA"
+      a(href="").copyright__link Политика конфиденциальности
