--- a/source/pug/components/_header.pug
+++ b/source/pug/components/_header.pug
@@ -1,8 +1,53 @@
-.header__menu.header-main__menu.e_menu
-	div
+.info
+  .info-container.container
+    .info__left
+      a(href="tel:+74956645864" target="_blank").info__link +7 (995) 965-30-03
+      span.info__separator |
+      a(href="mailto:cnpp.dialectica@gmail.com" target="_blank").info__link cnpp.dialectica@gmail.com
+    .info__socials.socials
+      a(href="https://www.youtube.com/channel/UC9O-RlVMSnHv5o2kL5QciIw" target="_blank").socials__link
+        img(src="/assets/img/telegram.svg", alt="YouTube").socials__icon
+      a(href="https://www.youtube.com/channel/UC9O-RlVMSnHv5o2kL5QciIw" target="_blank").socials__link
+        img(src="/assets/img/telegram.svg", alt="YouTube").socials__icon
+      a(href="https://www.youtube.com/channel/UC9O-RlVMSnHv5o2kL5QciIw" target="_blank").socials__link
+        img(src="/assets/img/telegram.svg", alt="YouTube").socials__icon
+      a(href="https://www.youtube.com/channel/UC9O-RlVMSnHv5o2kL5QciIw" target="_blank").socials__link
+        img(src="/assets/img/telegram.svg", alt="YouTube").socials__icon
 
-header.header.header-main
-	.header-container.container
+header.header
+  .header-container.container
+    .header__row.header__row-1
+      a(href="").header-logo
+        img(src="https://cnpp.ru/wp-content/uploads/2020/09/osnovnoj-gorizontalnyj-min-1-e1599583381728.png" srcset="https://cnpp.ru/wp-content/uploads/2020/09/osnovnoj-gorizontalnyj-min-1-e1599583381728.png 1x, https://cnpp.ru/wp-content/uploads/2020/09/osnovnoj-gorizontalnyj-min-1-e1599583381728.png 2x" width="572" height="119" style="max-height:119px;height:auto;" alt="Центр научно-практической психологии Dialectica" data-retina_logo_url="https://cnpp.ru/wp-content/uploads/2020/09/osnovnoj-gorizontalnyj-min-1-e1599583381728.png").header-logo__link
+      .header__menu.header-main__menu.e_menu
+        div
+    nav.header__row.header__row-2.hd
+      ul.menu
+        li.menu-item.menu__item
+          a(href="") О центре
+        li.menu-item.menu__item
+          a(href="") Специалисты
+        li.menu-item.menu__item
+          a(href="") Расстройства
+        li.menu-item.menu__item.menu-item-has-children
+          a(href="") Клиенту
+          ul.sub-menu
+            li.menu-item
+              a(href="") Правила получения услуг
+            li.menu-item
+              a(href="") Навыки DBT
+            li.menu-item
+              a(href="") Семейные связи
+            li.menu-item
+              a(href="") Комплексный курс DBT
+            li.menu-item
+              a(href="") Курс Skills for life
+        li.menu-item.menu__item
+          a(href="") Услуги
+        li.menu-item.menu__item.btn-menu
+          a(href="") Запись на прием
+        li.menu-item.menu__item
+          a(href="") Мой профиль
 
 
 
