--- a/source/pug/main.pug
+++ b/source/pug/main.pug
@@ -21,10 +21,9 @@
       include content/main-screen-4
     section.section
       include content/main-screen-5
+    include components/_form
 
     include components/_footer
-
-    include components/_modals
 
     include components/_scripts
 
