--- a/source/sass/components/btn.sass
+++ b/source/sass/components/btn.sass
@@ -1,44 +1,12 @@
-.btn1
-  background: $color_primary
-  padding: 15px 45px
-
-.btn2
-  border: 2px solid $color_primary
-  padding: 13px 43px
-  &:hover
-    border: 2px solid $color_primary_light
-
-.btn3
-  display: flex
-  align-items: center
-  justify-content: center
-  height: 52px
-  width: 52px
-  min-height: 52px
-  min-width: 52px
-  border-radius: 50%
-  border-width: 2px
-  color: $color_btn
-  border-color: $color_primary
-  transition: $transition
-  &:hover
-    background: $color_primary_light
-    border-color: $color_primary_light
-  &.inactive
-    &:hover
-      background: $bg_blocks
-  &.inactive, &.swiper-button-disabled
-    color: $color_text_2
-    border-color: $color_text_2
-
-.btn
+.btn-menu a, .btn
   display: block
   width: max-content
-  border-radius: 100px
-  font-size: 17px
-  line-height: 1.3
-  letter-spacing: 0.06em
+  font-size: 14px
+  line-height: 17px
+  background: $color_primary
   color: $color_btn
+  padding: 13px 24px
+  cursor: pointer
   transition: $transition
   &:hover
     background: $color_primary_light
