--- a/source/sass/abstracts/_variables.sass
+++ b/source/sass/abstracts/_variables.sass
@@ -4,23 +4,20 @@ $offset_global: 16px
 
 /* BEGIN COLORS */
 
-$color_primary: #F1CDB3
-$color_primary_light: #FDDCC4
-$color_title_1: #545454
-$color_title_2: #fff
-$color_text_1: #4C4C4C
+$color_primary: #84a4ac
+$color_primary_light: #99c6d1
+$color_primary_dark: #607d8b
+$color_title_1: #878787
+$color_title_2: #4d4d4d
+$color_text_1: #878787
 $color_text_2: #CDCDCD
-$color_text_3: #B2B2B2
-$color_text_hover: #FAFAFA
-$color_btn: #292929
-$bg_blocks: #F6F6F6
-$bg_menumob: #292929
+$color_btn: #fff
 
 $color_card: #fafafa
 $color_card_hover: #fff
 
-$size_text: 15px
-$lh_text: 24px
+$size_text: 16px
+$lh_text: 1.3
 
 $transition: 0.3s
 /* END COLORS */
