--- a/source/sass/main.scss
+++ b/source/sass/main.scss
@@ -2,17 +2,18 @@
 @import "base/reset";
 @import "base/typography";
 @import "base/base";
-@import "base/custom-container";
+// @import "base/custom-container";
 // @import "base/custom-offsets";
 
 //Abstract
 @import "abstracts/variables";
 @import "abstracts/fonts";
-@import "abstracts/general-style";
 @import "abstracts/mixins";
+@import "abstracts/general-style";
 
 //Layout
 @import "layout/header";
+@import "layout/form";
 @import "layout/footer";
 
 //Components
