--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -734,10 +734,6 @@ a:focus {
 	Размеры относительны 320px
 */
 
-/* BEGIN CONTAINER SETTINGS */
-
-/* END CONTAINER SETTINGS */
-
 /* BEGIN PADDING AND MARGIN SETTINGS */
 
 /* END PADDING AND MARGIN SETTINGS */
@@ -765,7 +761,7 @@ a:focus {
 /* scroll */
 
 * {
-  scrollbar-color: #F1CDB3 #fff;
+  scrollbar-color: #84a4ac #fff;
   scrollbar-width: thin;
 }
 
@@ -779,7 +775,7 @@ a:focus {
 }
 
 *::-webkit-scrollbar-thumb {
-  box-shadow: inset 0 0 14px 14px #F1CDB3;
+  box-shadow: inset 0 0 14px 14px #84a4ac;
   border-radius: 24px;
 }
 
@@ -795,12 +791,18 @@ body {
   position: relative;
   overflow-x: hidden;
   font-family: "Manrope", sans-serif;
-  font-weight: 400;
+  font-weight: 300;
   font-style: normal;
-  font-size: 15px;
-  line-height: 1.6;
-  color: #4C4C4C;
+  font-size: 16px;
+  line-height: 1.3;
+  color: #878787;
   background: #fff;
+}
+
+.container {
+  max-width: 1860px;
+  margin: 0 auto;
+  padding: 0 30px;
 }
 
 .title {
@@ -810,29 +812,193 @@ body {
 }
 
 .title.title-h2 {
-  font-size: 44px;
-  color: #fff;
+  font-size: 26px;
+  color: #607d8b;
 }
 
 .title.title-h3 {
   font-size: 35px;
   letter-spacing: 0.06em;
-  color: #545454;
+  color: #878787;
 }
 
-.title.title-footer {
-  color: #fff;
+.section {
+  padding: 50px 0;
+}
+
+.section.form {
+  padding-bottom: 80px;
+}
+
+.socials {
+  display: flex;
+  align-items: center;
+}
+
+.socials__icon {
+  height: auto;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.select {
+  position: relative;
+  height: 30px;
+  border: 1px solid #84a4ac;
+}
+
+.select--active {
+  z-index: 1;
+}
+
+.select--active .select__toggle::after {
+  transform: rotate(180deg);
+}
+
+.select--active .select__options {
+  visibility: visible;
+}
+
+.select_fillet .select__toggle {
+  color: #333;
+}
+
+.select::after {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  width: 30px;
+  border-left: 1px solid #84a4ac;
+}
+
+.select__toggle {
+  display: flex;
+  align-items: center;
+  position: relative;
+  height: 100%;
+  width: 100%;
+  font-size: 13px;
+  color: #aaa9a9;
+  padding: 0 15px;
+  border: none;
+  outline: 0;
+  cursor: pointer;
+}
+
+.select__toggle::after {
+  content: "";
+  position: absolute;
+  right: 8px;
+  top: 11.5px;
+  display: block;
+  width: 14px;
+  height: 7px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: url(../img/arrow.svg);
+  transition: 0.3s;
+}
+
+.select__options {
+  position: absolute;
+  width: calc(100% + 2px);
+  top: 100%;
+  margin: 0 -1px -1px;
+  display: flex;
+  flex-direction: column;
+  background: #fff;
+  border: 1px solid #84a4ac;
+  padding-bottom: 8px;
+  visibility: hidden;
+  max-height: 248px;
+  overflow: auto;
+}
+
+.select__option {
+  font-size: 13px;
+  color: #aaa9a9;
+  padding: 10px 15px;
+  width: 100%;
+  background: #fff;
+  outline: 0;
+  text-align: left;
+  border: none;
+  cursor: pointer;
+}
+
+.select__option:first-child {
+  display: none;
+}
+
+select {
+  display: none;
+}
+
+input:focus-visible {
+  border-bottom: none !important;
+}
+
+input,
+textarea {
+  padding: 7px 10px;
+  color: #333;
+  font-size: 13px;
+}
+
+input:focus-visible,
+textarea:focus-visible {
+  outline: 2px solid #607d8b !important;
+}
+
+textarea {
+  overflow: auto;
+}
+
+.line {
+  display: block;
+  width: 50px;
+  height: 1px;
+  background: #607d8b;
+  margin: 20px 0;
+}
+
+.header {
+  position: fixed;
+  left: 0;
+  right: 0;
+  box-shadow: rgba(0, 0, 0, 0.12) 0 1px 3px;
+  background: #fff;
+  z-index: 5;
+  transition: 0.3s;
+}
+
+.header.fixed {
+  top: 0;
 }
 
 .header .menu {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
+  gap: 45px;
   margin-bottom: 0;
+}
+
+.header .menu-item {
+  position: relative;
 }
 
 .header .menu-item > a {
   text-transform: uppercase;
+  transition: 0.3s;
+}
+
+.header .menu-item:hover > ul {
+  visibility: visible;
+  opacity: 1;
 }
 
 .header-logo__link {
@@ -841,71 +1007,313 @@ body {
 
 .header__row {
   display: flex;
+  justify-content: center;
   align-items: center;
 }
 
 .header__row-1 {
-  justify-content: center;
-}
-
-.btn1 {
-  background: #F1CDB3;
-  padding: 15px 45px;
-}
-
-.btn2 {
-  border: 2px solid #F1CDB3;
-  padding: 13px 43px;
-}
-
-.btn2:hover {
-  border: 2px solid #FDDCC4;
-}
-
-.btn3 {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 52px;
-  width: 52px;
-  min-height: 52px;
-  min-width: 52px;
-  border-radius: 50%;
-  border-width: 2px;
-  color: #292929;
-  border-color: #F1CDB3;
+  visibility: visible;
+  padding: 30px 0;
   transition: 0.3s;
 }
 
-.btn3:hover {
-  background: #FDDCC4;
-  border-color: #FDDCC4;
+.info {
+  padding: 10px 0;
+  background: #94afb7;
+  color: #fff;
+  font-size: 16px;
+  font-weight: 500;
 }
 
-.btn3.inactive:hover {
-  background: #F6F6F6;
+.info-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.btn3.inactive,
-.btn3.swiper-button-disabled {
-  color: #CDCDCD;
-  border-color: #CDCDCD;
+.info__separator {
+  padding: 0 5px;
 }
 
+.info__socials {
+  gap: 20px;
+}
+
+.info__socials .socials__link {
+  width: 25px;
+  height: auto;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.menu-item-has-children > a {
+  display: flex !important;
+  align-items: center;
+}
+
+.menu-item-has-children > a::after {
+  content: "›";
+  display: block;
+  transform: rotate(90deg);
+  margin-left: 8px;
+}
+
+.sub-menu {
+  display: block;
+  position: absolute;
+  width: -moz-max-content;
+  width: max-content;
+  top: 36px;
+  left: -20px;
+  padding-bottom: 8px;
+  box-shadow: rgba(0, 0, 0, 0.12) 0 2px 2px;
+  background: #fff;
+  margin-bottom: 0;
+  visibility: hidden;
+  opacity: 0;
+  z-index: 1;
+  transition: 0.3s;
+}
+
+.sub-menu > li > a {
+  display: block;
+  padding: 8px 20px;
+  font-size: 14px;
+  color: #262729;
+  text-indent: 0;
+  height: auto;
+  transition: 0.3s;
+}
+
+.header__menu {
+  display: none;
+  position: relative;
+  cursor: pointer;
+  margin: auto 0;
+  width: 50px;
+  height: 50px;
+}
+
+.header__menu div {
+  width: 30px;
+  height: 2px;
+  margin: auto;
+  background: #333;
+  cursor: pointer;
+}
+
+.header__menu div::after,
+.header__menu div::before {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 30px;
+  height: 2px;
+  background: #333;
+}
+
+.header__menu div::before {
+  top: 15px;
+}
+
+.header__menu div::after {
+  bottom: 15px;
+}
+
+.form {
+  box-shadow: -2px -2px 7px -1px rgba(0, 0, 0, 0.11);
+}
+
+.form__row {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+  margin-bottom: 30px;
+}
+
+.form__description {
+  margin-bottom: 50px;
+}
+
+.form__item input {
+  border-bottom: 1px solid #84a4ac;
+  width: 100%;
+}
+
+.form__item label {
+  margin-bottom: 3px;
+}
+
+.form__item p {
+  margin-bottom: 0;
+}
+
+.form__submit {
+  margin: 0 auto;
+}
+
+.form-container {
+  max-width: 1230px;
+}
+
+textarea {
+  width: 100%;
+  max-width: 100%;
+  min-width: 100%;
+  max-height: 150px;
+  border: 1px solid #84a4ac;
+}
+
+.footer {
+  color: #a0a4b1;
+  font-weight: 300;
+}
+
+.footer__row {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 40px;
+  padding-top: 30px !important;
+  padding-bottom: 30px !important;
+  background: #e9eaee;
+}
+
+.footer-title {
+  color: #878787;
+  font-weight: 400;
+  margin-bottom: 12px;
+  text-transform: uppercase;
+}
+
+.footer-description {
+  max-width: 414px;
+}
+
+.footer-btn {
+  margin-top: 20px;
+}
+
+.footer-menu {
+  margin-bottom: 0;
+}
+
+.footer-menu a {
+  line-height: 1.8;
+  color: #84a4ac;
+  transition: 0.3s;
+}
+
+.footer-menu li:not(.btn-menu) {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  position: relative;
+}
+
+.footer-menu li:not(.btn-menu):hover a {
+  color: #99c6d1;
+}
+
+.footer-menu li:not(.btn-menu):hover::before {
+  background: #99c6d1;
+}
+
+.footer-menu li:not(.btn-menu)::before {
+  content: "";
+  display: block;
+  width: 6px;
+  min-width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background: #84a4ac;
+  transition: 0.3s;
+}
+
+.footer__item {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  margin-bottom: 15px;
+}
+
+.footer__item:hover {
+  color: #607d8b;
+}
+
+.footer__icon-1 {
+  min-width: 20px;
+  width: 20px;
+}
+
+.footer__icon-2 {
+  min-width: 22px;
+  width: 22px;
+}
+
+.footer__map {
+  margin-top: 25px;
+}
+
+.footer-socials {
+  gap: 10px;
+}
+
+.footer-socials .socials__link {
+  width: 30px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 2px;
+  background: #84a4ac;
+  transition: 0.3s;
+}
+
+.footer-socials .socials__link:hover {
+  background: #99c6d1;
+}
+
+.footer-socials .socials__icon {
+  width: 20px;
+}
+
+.copyright {
+  padding: 10px 0;
+  text-align: center;
+}
+
+.copyright__text {
+  color: #878787;
+}
+
+.copyright__link {
+  font-size: 14px;
+  font-weight: 400;
+  color: #84a4ac;
+  transition: 0.3s;
+}
+
+.copyright__link:hover {
+  color: #607d8b;
+}
+
+.btn-menu a,
 .btn {
   display: block;
   width: -moz-max-content;
   width: max-content;
-  border-radius: 100px;
-  font-size: 17px;
-  line-height: 1.3;
-  letter-spacing: 0.06em;
-  color: #292929;
+  font-size: 14px;
+  line-height: 17px;
+  background: #84a4ac;
+  color: #fff;
+  padding: 13px 24px;
+  cursor: pointer;
   transition: 0.3s;
 }
 
+.btn-menu a:hover,
 .btn:hover {
-  background: #FDDCC4;
+  background: #99c6d1;
 }
 
 /**
@@ -1614,14 +2022,75 @@ button.swiper-pagination-bullet {
   overflow: hidden;
 }
 
-@media (min-width: 1280px) {
-  .container {
-    padding-left: calc((100% - 1230px) / 2 + 15px);
-    padding-right: calc((100% - 1230px) / 2 + 15px);
+@media (min-width: 1169px) {
+  .header.fixed .header-logo {
+    display: none;
+  }
+
+  .header.fixed .header__row-1 {
+    height: 0;
+    visibility: hidden;
+    padding: 0;
+  }
+}
+
+@media (max-width: 1170px) {
+  .header__row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .header__row-1 {
+    padding: 15px 0;
+  }
+
+  .header__row-2 {
+    display: none;
+  }
+
+  .header__menu {
+    display: flex;
+  }
+}
+
+@media (max-width: 992px) {
+  .header__row-2.hd {
+    z-index: -1;
+    visibility: hidden;
+    display: inherit;
+    opacity: 0;
+  }
+}
+
+@media (max-width: 991px) {
+  .header__row-2 {
+    display: block;
+    position: fixed;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    background: #fff;
+    width: -moz-max-content;
+    width: max-content;
+    padding: 60px 40px 22px calc((100% - 740px) / 2 + 15px);
+  }
+
+  .form__row {
+    grid-template-columns: repeat(1, 1fr);
+    gap: 30px;
+  }
+
+  .footer-title {
+    margin-bottom: 10px;
   }
 }
 
 @media (max-width: 767px) {
+  .container {
+    padding: 0 15px;
+  }
+
   .title.title-h2 {
     text-align: center;
     font-size: 25px;
@@ -1635,21 +2104,61 @@ button.swiper-pagination-bullet {
     line-height: 1.3;
   }
 
-  .title.title-footer {
-    margin: 0 auto 40px;
+  .info-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 8px;
+  }
+
+  .info__socials .socials__link {
+    width: 17px;
+  }
+
+  .footer__row {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .footer__map {
+    display: none;
   }
 }
 
-@media (min-width: 768px) and (max-width: 1279px) {
-  .container {
-    padding-left: calc((100% - 738px) / 2 + 15px);
-    padding-right: calc((100% - 738px) / 2 + 15px);
+@media ((max-width: 991px) and (min-width: 767px)) {
+  .footer__row {
+    grid-template-columns: repeat(8, 1fr);
+    grid-template-areas: "a a a a b b b b" "..c c c c ..";
+    gap: 30px;
+  }
+
+  .footer-col-1 {
+    grid-area: a;
+  }
+
+  .footer-col-2 {
+    grid-area: b;
+  }
+
+  .footer-col-3 {
+    grid-area: c;
   }
 }
 
-@media (min-width: 320px) and (max-width: 767px) {
-  .container {
-    padding-left: 10px;
-    padding-right: 10px;
+@media ((max-width: 991px) and (min-width: 767px)){
+  .footer-col-1 {
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 7;
+  }
+  .footer-col-2 {
+    -ms-grid-row: 1;
+    -ms-grid-column: 9;
+    -ms-grid-column-span: 7;
+  }
+  .footer-col-3 {
+    -ms-grid-row: 3;
+    -ms-grid-column: 3;
+    -ms-grid-column-span: 5;
   }
 }
