feat: add price page and fix form

--- a/source/pug/components/_footer.pug
+++ b/source/pug/components/_footer.pug
@@ -18,13 +18,13 @@ footer.footer
       .footer-title Мы в соц сетях
       .footer-socials.socials
         a(href="https://www.youtube.com/channel/UC9O-RlVMSnHv5o2kL5QciIw" target="_blank").socials__link
-          img(src="/assets/img/telegram.svg", alt="YouTube").socials__icon
+          img(src="./assets/img/telegram.svg", alt="YouTube").socials__icon
         a(href="https://www.youtube.com/channel/UC9O-RlVMSnHv5o2kL5QciIw" target="_blank").socials__link
-          img(src="/assets/img/telegram.svg", alt="YouTube").socials__icon
+          img(src="./assets/img/telegram.svg", alt="YouTube").socials__icon
         a(href="https://www.youtube.com/channel/UC9O-RlVMSnHv5o2kL5QciIw" target="_blank").socials__link
-          img(src="/assets/img/telegram.svg", alt="YouTube").socials__icon
+          img(src="./assets/img/telegram.svg", alt="YouTube").socials__icon
         a(href="https://www.youtube.com/channel/UC9O-RlVMSnHv5o2kL5QciIw" target="_blank").socials__link
-          img(src="/assets/img/telegram.svg", alt="YouTube").socials__icon
+          img(src="./assets/img/telegram.svg", alt="YouTube").socials__icon
     .footer-col.footer-col-2
       .footer-title Направления работы
       ul.footer-menu
