--- a/source/pug/index.pug
+++ b/source/pug/index.pug
@@ -15,6 +15,7 @@
         a(href="main.html") Главная
       li
         a(href="about.html") О центре
-
+      li
+        a(href="price.html") Прайс-лист
 </body>
 </html>
