--- a/source/sass/abstracts/_variables.sass
+++ b/source/sass/abstracts/_variables.sass
@@ -10,7 +10,7 @@ $color_primary_dark: #607d8b
 $color_title_1: #878787
 $color_title_2: #4d4d4d
 $color_text_1: #878787
-$color_text_2: #CDCDCD
+$color_text_2: #333
 $color_btn: #fff
 
 $color_card: #fafafa
