--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -814,6 +814,8 @@ body {
 .title.title-h2 {
   font-size: 26px;
   color: #607d8b;
+  max-width: 720px;
+  margin-bottom: 30px;
 }
 
 .title.title-h3 {
@@ -822,12 +824,21 @@ body {
   color: #878787;
 }
 
+.text-center {
+  text-align: center;
+  margin: 0 auto;
+}
+
 .section {
   padding: 50px 0;
 }
 
 .section.form {
   padding-bottom: 80px;
+}
+
+.section-first {
+  margin-top: 177.5px;
 }
 
 .socials {
@@ -937,10 +948,6 @@ select {
   display: none;
 }
 
-input:focus-visible {
-  border-bottom: none !important;
-}
-
 input,
 textarea {
   padding: 7px 10px;
@@ -950,6 +957,7 @@ textarea {
 
 input:focus-visible,
 textarea:focus-visible {
+  border: none !important;
   outline: 2px solid #607d8b !important;
 }
 
@@ -1013,7 +1021,7 @@ textarea {
 
 .header__row-1 {
   visibility: visible;
-  padding: 30px 0;
+  padding: 15px 0;
   transition: 0.3s;
 }
 
@@ -1044,6 +1052,10 @@ textarea {
   height: auto;
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+.info__link {
+  white-space: nowrap;
 }
 
 .menu-item-has-children > a {
@@ -1098,7 +1110,7 @@ textarea {
   width: 30px;
   height: 2px;
   margin: auto;
-  background: #333;
+  background: #607d8b;
   cursor: pointer;
 }
 
@@ -1109,7 +1121,7 @@ textarea {
   display: block;
   width: 30px;
   height: 2px;
-  background: #333;
+  background: #607d8b;
 }
 
 .header__menu div::before {
@@ -1162,6 +1174,17 @@ textarea {
   min-width: 100%;
   max-height: 150px;
   border: 1px solid #84a4ac;
+}
+
+.donate__row {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 30px;
+}
+
+.donate__text {
+  margin-bottom: 50px;
 }
 
 .footer {
@@ -1298,22 +1321,76 @@ textarea {
 }
 
 .btn-menu a,
-.btn {
+.btn,
+.btn-donate {
   display: block;
   width: -moz-max-content;
   width: max-content;
   font-size: 14px;
   line-height: 17px;
-  background: #84a4ac;
-  color: #fff;
   padding: 13px 24px;
   cursor: pointer;
   transition: 0.3s;
 }
 
+.btn-menu a,
+.btn {
+  background: #84a4ac;
+  color: #fff;
+}
+
 .btn-menu a:hover,
 .btn:hover {
   background: #99c6d1;
+}
+
+.btn-donate {
+  white-space: nowrap;
+  border: 1px solid #607d8b;
+  color: #607d8b;
+}
+
+.btn-donate:hover {
+  background: #99c6d1;
+  color: #fff;
+  border-color: #99c6d1;
+}
+
+.price__row {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  text-align: center;
+  gap: 10px;
+  margin-bottom: 30px;
+}
+
+.price__item {
+  border: 1px solid #607d8b;
+  padding: 15px 10px;
+}
+
+.price__btn {
+  margin: 0 auto;
+}
+
+.price__title,
+.price__text {
+  margin-bottom: 20px;
+}
+
+.price__value {
+  font-size: 24px;
+  font-weight: 500;
+  color: #607d8b;
+  margin-right: 5px;
+}
+
+.price__price {
+  margin-bottom: 10px;
+}
+
+.price__notion {
+  color: #333;
 }
 
 /**
@@ -2035,6 +2112,10 @@ button.swiper-pagination-bullet {
 }
 
 @media (max-width: 1170px) {
+  .section-first {
+    margin-top: 79.5px;
+  }
+
   .header__row {
     display: flex;
     justify-content: space-between;
@@ -2042,7 +2123,7 @@ button.swiper-pagination-bullet {
   }
 
   .header__row-1 {
-    padding: 15px 0;
+    padding: 10px 0;
   }
 
   .header__row-2 {
@@ -2081,8 +2162,16 @@ button.swiper-pagination-bullet {
     gap: 30px;
   }
 
+  .donate__row {
+    gap: 15px;
+  }
+
   .footer-title {
     margin-bottom: 10px;
+  }
+
+  .price__row {
+    grid-template-columns: repeat(3, 1fr);
   }
 }
 
@@ -2092,10 +2181,7 @@ button.swiper-pagination-bullet {
   }
 
   .title.title-h2 {
-    text-align: center;
-    font-size: 25px;
-    line-height: 1.3;
-    letter-spacing: 0.06em;
+    font-size: 24px;
   }
 
   .title.title-h3 {
@@ -2104,16 +2190,38 @@ button.swiper-pagination-bullet {
     line-height: 1.3;
   }
 
+  .section-first {
+    margin-top: 70px;
+  }
+
+  .header-logo__link {
+    max-width: 200px;
+  }
+
+  .header-container {
+    padding: 0 5px 0 15px;
+  }
+
   .info-container {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    gap: 8px;
+    gap: 12px;
+  }
+
+  .info__socials {
+    margin: 0 0 0 auto;
   }
 
   .info__socials .socials__link {
-    width: 17px;
+    width: 15px;
+  }
+
+  .info__left {
+    display: flex;
+    flex-wrap: wrap;
+    font-size: 14px;
   }
 
   .footer__row {
@@ -2123,12 +2231,22 @@ button.swiper-pagination-bullet {
   .footer__map {
     display: none;
   }
+
+  .price__row {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 375px) {
+  .price__row {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
 
 @media ((max-width: 991px) and (min-width: 767px)) {
   .footer__row {
     grid-template-columns: repeat(8, 1fr);
-    grid-template-areas: "a a a a b b b b" "..c c c c ..";
+    grid-template-areas: "a a a a b b b b" ". . c c c c . .";
     gap: 30px;
   }
 
@@ -2158,7 +2276,7 @@ button.swiper-pagination-bullet {
   }
   .footer-col-3 {
     -ms-grid-row: 3;
-    -ms-grid-column: 3;
-    -ms-grid-column-span: 5;
+    -ms-grid-column: 5;
+    -ms-grid-column-span: 7;
   }
 }
