feat: add first block desctop for main page

--- a/source/sass/abstracts/_variables.sass
+++ b/source/sass/abstracts/_variables.sass
@@ -12,6 +12,8 @@ $color_title_2: #4d4d4d
 $color_text_1: #878787
 $color_text_2: #333
 $color_btn: #fff
+$bg_dark: #4a707a
+$bg_translucent: rgba(148,176,183,0.59)
 
 $color_card: #fafafa
 $color_card_hover: #fff
