--- a/source/pug/main.pug
+++ b/source/pug/main.pug
@@ -11,7 +11,7 @@
 
     include components/_header
 
-    section.section.section-first
+    section.section-first.main-1
       include content/main-screen-1
     section.section
       include content/main-screen-2
