--- a/source/sass/abstracts/_general-style.sass
+++ b/source/sass/abstracts/_general-style.sass
@@ -45,6 +45,10 @@ body
   font-weight: 400
   font-style: normal
   line-height: 1.3
+  &.title-h1
+    & span
+      color: $color_primary
+      text-transform: uppercase
   &.title-h2
     font-size: 26px
     color: $color_primary_dark
@@ -70,7 +74,7 @@ body
   &.form
     padding-bottom: 80px
   &-first
-    margin-top: 177.5px
+    margin-top: 132.5px
     @media (max-width: 1170px)
       margin-top: 79.5px
     @media (max-width: 767px)
