feat: add desorder page

--- a/source/pug/components/_footer.pug
+++ b/source/pug/components/_footer.pug
@@ -27,12 +27,12 @@ footer.footer
           img(src="./assets/img/telegram.svg", alt="YouTube").socials__icon
     .footer-col.footer-col-2
       .footer-title Направления работы
-      ul.footer-menu
-        li.menu-item
+      ul.footer-menu.list
+        li.menu-item.list__item
           a(href="") Суицидальное поведение/самоповреждение
-        li.menu-item
+        li.menu-item.list__item
           a(href="") Расстройства пищевого поведения
-        li.menu-item 
+        li.menu-item.list__item
           a(href="") Обучение специалистов
         li.menu-item.btn-menu.footer-btn
           a(href="") Все направления
