--- a/source/pug/content/main-screen-1.pug
+++ b/source/pug/content/main-screen-1.pug
@@ -1,20 +1,26 @@
 .container
   .main-1__col.main-1__col-1
     h1.title.title-h1.main-1__title Центр <span>DIALECTICA</span> — психологическая помощь по мировым стандартам
-    h2.title.title-h2.main-1__subtitle Мы используем методы с научно доказанной эффективностью.
-    .main-1__row
-      a(href="").main-1__btn.btn Записаться на прием
+    h2.title.title-h2.main-1__subtitle Мы используем методы с научно доказанной эффективностью
+    .main-1__btns
       a(href="").main-1__btn.btn Выбрать специалиста
-      a(href="").main-1__btn.btn Группа DBT
-    a(href="").main-1__btn.btn Запись на курс Skills for life
+      a(href="").main-1__btn.btn Запись в группу DBT
+      a(href="").main-1__btn.btn Запись на курс Skills for life
   .main-1__col.main-1__col-2
     .main-1__block
       .main-1__sub
         img(src="./assets/img/clock.svg", alt="")
         span ЧАСЫ РАБОТЫ
       .main-1__text Время Новосибирское
+      .main-1__line
       .main-1__table
         .main-1__cl Понедельник - пятница <br> 10:00 — 19:00
         .main-1__cl Суббота <br> 10:00 — 15:00
-      a(href="tel:+79959653003").main-1__link +7 (995) 965-30-03
+      .main-1__line
+      a(href="tel:+79959653003").main-1__link
+        <svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M18.9746 19.9693C17.0202 21.9236 12.0153 20.0873 7.79578 15.8677C3.57623 11.6482 1.7399 6.64325 3.69421 4.68893L4.98098 3.40216C5.8693 2.51383 7.33305 2.53731 8.25034 3.45461L10.2434 5.4477C11.1607 6.36499 11.1842 7.82874 10.2959 8.71706L10.0195 8.99345C9.53988 9.47307 9.49295 10.2468 9.93861 10.7868C10.3685 11.3078 10.8319 11.8266 11.3344 12.3291C11.8369 12.8316 12.3557 13.295 12.8766 13.7249C13.4167 14.1705 14.1904 14.1236 14.67 13.644L14.9464 13.3676C15.8347 12.4793 17.2985 12.5028 18.2158 13.4201L20.2089 15.4131C21.1262 16.3304 21.1496 17.7942 20.2613 18.6825L18.9746 19.9693Z" stroke="currentColor" stroke-width="2"></path>
+        <path d="M17.539 8.75071C17.295 8.15553 16.9314 7.5979 16.4481 7.11463C15.9921 6.65865 15.47 6.30918 14.9125 6.06622" stroke="currentColor" stroke-width="2" stroke-linecap="round"></path>
+        <path d="M14.9125 2.66341C16.2472 3.14691 17.4994 3.92365 18.5694 4.99364C19.6662 6.09049 20.4549 7.37883 20.9355 8.75113" stroke="currentColor" stroke-width="2" stroke-linecap="round"></path>
+        </svg> +7 (995) 965-30-03
 
