--- a/source/pug/index.pug
+++ b/source/pug/index.pug
@@ -17,5 +17,7 @@
         a(href="about.html") О центре
       li
         a(href="price.html") Прайс-лист
+      li
+        a(href="disorder.html") Страница расстройства
 </body>
 </html>
