--- a/source/sass/abstracts/_variables.sass
+++ b/source/sass/abstracts/_variables.sass
@@ -13,7 +13,9 @@ $color_text_1: #878787
 $color_text_2: #333
 $color_btn: #fff
 $bg_dark: #4a707a
-$bg_translucent: rgba(148,176,183,0.59)
+$bg_translucent: rgba(255, 255, 255, 0.3)
+$border_color: #dddddd
+$bg_grey: #f6f6f6
 
 $color_card: #fafafa
 $color_card_hover: #fff
