--- a/source/sass/layout/_header.sass
+++ b/source/sass/layout/_header.sass
@@ -16,6 +16,8 @@
         height: 0
         visibility: hidden
         padding: 0
+    & ~ .section-first
+      margin-top: 0
   & .menu
     +center
     gap: 45px
@@ -80,7 +82,7 @@
   &__separator
     padding: 0 5px
   &__socials
-    gap: 20px
+    gap: 18px
     @media (max-width: 767px)
       margin: 0 0 0 auto
     & .socials__link
