--- a/source/pug/components/_head.pug
+++ b/source/pug/components/_head.pug
@@ -10,3 +10,7 @@
 <link rel="shortcut icon" href="assets/img/fav.ico" />
 <link rel="apple-touch-icon" href="assets/img/fav.png" />
 <link rel="icon" type="image/png" href="assets/img/favicon.png">
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500;600;700&family=Tenor+Sans&display=swap" rel="stylesheet">
