--- a/source/pug/components/_header.pug
+++ b/source/pug/components/_header.pug
@@ -6,11 +6,11 @@
       a(href="mailto:cnpp.dialectica@gmail.com" target="_blank").info__link cnpp.dialectica@gmail.com
     .info__socials.socials
       a(href="https://www.youtube.com/channel/UC9O-RlVMSnHv5o2kL5QciIw" target="_blank").socials__link
-        img(src="./assets/img/telegram.svg", alt="YouTube").socials__icon
+        img(src="./assets/img/youtube.svg", alt="YouTube").socials__icon
       a(href="https://www.youtube.com/channel/UC9O-RlVMSnHv5o2kL5QciIw" target="_blank").socials__link
-        img(src="./assets/img/telegram.svg", alt="YouTube").socials__icon
+        img(src="./assets/img/vk.svg", alt="YouTube").socials__icon
       a(href="https://www.youtube.com/channel/UC9O-RlVMSnHv5o2kL5QciIw" target="_blank").socials__link
-        img(src="./assets/img/telegram.svg", alt="YouTube").socials__icon
+        img(src="./assets/img/whatsapp.svg", alt="YouTube").socials__icon
       a(href="https://www.youtube.com/channel/UC9O-RlVMSnHv5o2kL5QciIw" target="_blank").socials__link
         img(src="./assets/img/telegram.svg", alt="YouTube").socials__icon
 
