--- a/source/sass/abstracts/_general-style.sass
+++ b/source/sass/abstracts/_general-style.sass
@@ -26,7 +26,7 @@ html
 body
   position: relative
   overflow-x: hidden
-  font-family: 'Manrope', sans-serif
+  font-family: 'Tenor Sans', sans-serif
   font-weight: 300
   font-style: normal
   font-size: $size_text
@@ -46,8 +46,9 @@ body
   font-style: normal
   line-height: 1.3
   &.title-h1
+    font-size: 60px
+    line-height: 70px
     & span
-      color: $color_primary
       text-transform: uppercase
   &.title-h2
     font-size: 26px
@@ -75,6 +76,7 @@ body
     padding-bottom: 80px
   &-first
     margin-top: 132.5px
+    transition: $transition
     @media (max-width: 1170px)
       margin-top: 79.5px
     @media (max-width: 767px)
@@ -179,3 +181,53 @@ textarea
   height: 1px
   background: $color_primary_dark
   margin: 20px 0
+
+
+//for note (disorders)
+.list
+  margin-bottom: 0
+  &__item
+    position: relative
+    display: flex
+    align-items: center
+    gap: 8px
+    line-height: 1.8
+    &::before
+      content: ''
+      display: block
+      width: 6px
+      min-width: 6px
+      height: 6px
+      border-radius: 50%
+      background: $color_primary
+      transition: $transition
+
+.attention
+  padding: 10px 0 10px 20px
+  margin: 30px 0
+  color: $color_primary
+  border-left: 3px solid $color_primary
+
+.title-note
+  +manrope
+  font-size: 20px
+  font-weight: 500
+  color: $color_primary
+  margin-bottom: 5px
+
+
+//socials in footer and share btn
+.footer-socials, .disorder__socials
+  gap: 10px
+  & .socials
+    &__link
+      width: 30px
+      height: 30px
+      +center
+      border-radius: 2px
+      background: $color_primary
+      transition: $transition
+      &:hover
+        background: $color_primary_light
+    &__icon
+      width: 20px
