--- a/source/sass/main.scss
+++ b/source/sass/main.scss
@@ -20,10 +20,12 @@
 //Components
 @import "components/modal";
 @import "components/btn";
+@import "components/item";
 
 //Pages
 @import "pages/main";
 @import "pages/price";
+@import "pages/disorder";
 
 //Vendors
 @import "vendors/swiper.min";
