--- a/source/sass/pages/_main.sass
+++ b/source/sass/pages/_main.sass
@@ -1,24 +1,33 @@
 .main-1
-  padding-top: 80px
+  height: 100vh
+  padding-top: 200px
   padding-bottom: 80px
   color: #fff
-  background: linear-gradient(179deg, rgba(0,0,0,0.9) 0%,rgba(255,255,255,0) 100%),url(https\:\/\/cnpp\.ru\/wp-content\/uploads\/2022\/12\/Главная-вариант-2-сж\.jpg)
+  background: url(../img/bg-first.png), linear-gradient(90deg, #407482 50.52%, rgba(64, 116, 130, 0) 100%)
+  +bg
+  @media (max-width: 767px)
+    padding-top: 40px
+    padding-bottom: 40px
   & .container
     display: flex
     flex-wrap: nowrap
+    @media (max-width: 767px)
+      flex-direction: column
+      flex-wrap: wrap
+  &__title
+    max-width: 820px
+  &__subtitle
+    color: #fff!important
   &__col
     &-1
-      width: 65.3333%
-      margin-right: 4%
-    &-2
-      width: 30.6666%
-  &__row
+      width: 0 1 60%
+  &__btns
     display: flex
+    flex-direction: column
     gap: 20px
-    margin-bottom: 30px
   &__block
     background: $bg_translucent
-    padding: 4% 1%
+    padding: 50px 30px
     text-align: center
   &__sub
     display: flex
@@ -26,12 +35,10 @@
     gap: 5px
     margin-bottom: 10px
     & img
-      width: 21px
+      width: 16px
       height: auto
       object-fit: cover
   &__table
-    border-top: 1px solid #fff
-    border-bottom: 1px solid #fff
     margin: 20px 0
     padding: 15px 0
   &__cl
@@ -39,3 +46,19 @@
     text-align: center
     &:last-child
       margin-bottom: 0
+  &__link
+    +center
+    font-size: 18px
+    gap: 5px
+  &__line
+    width: 176px
+    height: 1px
+    background: #fff
+
+.main-2
+  &.container
+    max-width: 1280px
+  &__grid
+    display: grid
+    grid-template-columns: repeat(4, 1fr)
+    gap: 20px
