--- a/source/sass/abstracts/_variables.sass
+++ b/source/sass/abstracts/_variables.sass
@@ -6,6 +6,7 @@ $offset_global: 16px
 
 $color_primary: #84a4ac
 $color_primary_light: #99c6d1
+$color_primary_bright: #3bafbf
 $color_primary_dark: #607d8b
 $color_title_1: #878787
 $color_title_2: #4d4d4d
