--- a/source/sass/components/btn.sass
+++ b/source/sass/components/btn.sass
@@ -2,7 +2,7 @@
   display: block
   width: max-content
   font-size: 14px
-  line-height: 17px
+  line-height: 1.22
   padding: 13px 24px
   cursor: pointer
   transition: $transition
