--- a/source/sass/pages/_disorder.sass
+++ b/source/sass/pages/_disorder.sass
@@ -66,7 +66,7 @@
   &__share
     margin-top: 70px
     @media (max-width: 767px)
-      margin-top: 3`0px
+      margin-top: 30px
     &-title
       color: #000
       margin-bottom: 10px
