--- a/source/pug/about.pug
+++ b/source/pug/about.pug
@@ -11,16 +11,14 @@
 
     include components/_header
 
-    section.section.section-first
-      include content/main-screen-1
+    section.section-first
+      include content/about-screen-1
+
     section.section
-      include content/main-screen-2
-    section.section
-      include content/main-screen-3
-    section.section
-      include content/main-screen-4
-    section.section
-      include content/main-screen-5
+      include content/about-screen-2
+
+    include content/about-screen-3
+
     include components/_form
 
     include components/_footer
