--- a/source/sass/main.scss
+++ b/source/sass/main.scss
@@ -26,6 +26,7 @@
 @import "pages/main";
 @import "pages/price";
 @import "pages/disorder";
+@import "pages/about";
 
 //Vendors
 @import "vendors/swiper.min";
