feat: add rules page and departments page

--- a/source/pug/components/_item.pug
+++ b/source/pug/components/_item.pug
@@ -1,7 +1,7 @@
 a(href="").item
-  img(src="https://i0.wp.com/cnpp.ru/wp-content/uploads/2020/11/-с-серым-фоном-e1604426111610.jpg?resize=1037%2C1037&ssl=1", alt="").item__img
+  img(src="../assets/img/item-1.png", alt="").item__img
   .item__info
-    .item__title Таисия Дергачева
+    .item__title СЕРГЕЙ СТАРОВЕРОВ
     .item__subtitle Клинический психолог
     .item__text
       p
