--- a/source/pug/index.pug
+++ b/source/pug/index.pug
@@ -19,5 +19,9 @@
         a(href="price.html") Прайс-лист
       li
         a(href="disorder.html") Страница расстройства
+      li
+        a(href="departments.html") Наши направления
+      li
+        a(href="rules.html") Правила получения услуг
 </body>
 </html>
