--- a/source/sass/main.scss
+++ b/source/sass/main.scss
@@ -27,6 +27,7 @@
 @import "pages/price";
 @import "pages/disorder";
 @import "pages/about";
+@import "pages/departments";
 
 //Vendors
 @import "vendors/swiper.min";
