--- a/source/pug/content/about-screen-1.pug
+++ b/source/pug/content/about-screen-1.pug
@@ -1,6 +1,6 @@
-.about-1
-  .about-1__block
-    h1.title.title-h1.about-1__title Центр 
+.first-template.about-1
+  .first-template__block
+    h1.title.title-h1.first-template__title Центр 
       span DIALECTICA
-    h2.title.title-h2.about-1__subtitle Создайте жизнь, которую стоит прожить
-    a(href="").btn.about-1__btn Записаться на прием
+    h2.title.title-h2.first-template__subtitle Создайте жизнь, которую стоит прожить
+    a(href="").btn.first-template__btn Записаться на прием
