--- a/source/sass/components/item.sass
+++ b/source/sass/components/item.sass
@@ -1,9 +1,14 @@
 .item
-  box-shadow: 2px 4px 9px -4px rgba(0,0,0,0.74)
+  display: flex
+  border-radius: 2px
   &__info
-    padding: 20px 10px
+    padding: 30px 30px 30px 50px
   &__title
     color: $color_primary_light
     font-size: 18px
     font-weight: 500
     margin-bottom: 15px
+  &__img
+    max-width: 300px
+    height: auto
+    object-fit: cover
