--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -790,7 +790,7 @@ html {
 body {
   position: relative;
   overflow-x: hidden;
-  font-family: "Manrope", sans-serif;
+  font-family: "Tenor Sans", sans-serif;
   font-weight: 300;
   font-style: normal;
   font-size: 16px;
@@ -809,6 +809,15 @@ body {
   font-weight: 400;
   font-style: normal;
   line-height: 1.3;
+}
+
+.title.title-h1 {
+  font-size: 60px;
+  line-height: 1.17;
+}
+
+.title.title-h1 span {
+  text-transform: uppercase;
 }
 
 .title.title-h2 {
@@ -838,7 +847,8 @@ body {
 }
 
 .section-first {
-  margin-top: 177.5px;
+  margin-top: 132.5px;
+  transition: 0.3s;
 }
 
 .socials {
@@ -973,6 +983,105 @@ textarea {
   margin: 20px 0;
 }
 
+.list {
+  margin-bottom: 0;
+}
+
+.list__item {
+  position: relative;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  line-height: 1.8;
+}
+
+.list__item::before {
+  content: "";
+  display: block;
+  width: 6px;
+  min-width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background: #84a4ac;
+  transition: 0.3s;
+}
+
+.attention {
+  padding: 10px 0 10px 20px;
+  margin: 30px 0;
+  color: #84a4ac;
+  border-left: 3px solid #84a4ac;
+}
+
+.title-note {
+  font-family: "Manrope", sans-serif;
+  font-size: 20px;
+  font-weight: 500;
+  color: #84a4ac;
+  margin-bottom: 5px;
+}
+
+.footer-socials,
+.disorder__socials {
+  gap: 10px;
+}
+
+.footer-socials .socials__link,
+.disorder__socials .socials__link {
+  width: 30px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 2px;
+  background: #84a4ac;
+  transition: 0.3s;
+}
+
+.footer-socials .socials__link:hover,
+.disorder__socials .socials__link:hover {
+  background: #99c6d1;
+}
+
+.footer-socials .socials__icon,
+.disorder__socials .socials__icon {
+  width: 20px;
+}
+
+.first-template {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: calc(100vh - 176.5px);
+}
+
+.first-template__block {
+  max-width: 570px;
+  margin: 0 auto;
+}
+
+.first-template__title,
+.first-template__subtitle {
+  text-align: center;
+  color: #fff !important;
+}
+
+.first-template__title span {
+  text-transform: uppercase;
+  color: #3bafbf;
+}
+
+.first-template__subtitle {
+  margin-bottom: 50px !important;
+}
+
+.first-template__btn {
+  font-size: 20px !important;
+  margin: 0 auto;
+}
+
 .header {
   position: fixed;
   left: 0;
@@ -985,6 +1094,10 @@ textarea {
 
 .header.fixed {
   top: 0;
+}
+
+.header.fixed ~ .section-first {
+  margin-top: 0;
 }
 
 .header .menu {
@@ -1027,7 +1140,7 @@ textarea {
 
 .info {
   padding: 10px 0;
-  background: #94afb7;
+  background: #4a707a;
   color: #fff;
   font-size: 16px;
   font-weight: 500;
@@ -1044,7 +1157,7 @@ textarea {
 }
 
 .info__socials {
-  gap: 20px;
+  gap: 18px;
 }
 
 .info__socials .socials__link {
@@ -1216,21 +1329,10 @@ textarea {
   margin-top: 20px;
 }
 
-.footer-menu {
-  margin-bottom: 0;
-}
-
 .footer-menu a {
   line-height: 1.8;
   color: #84a4ac;
   transition: 0.3s;
-}
-
-.footer-menu li:not(.btn-menu) {
-  display: flex;
-  align-items: center;
-  gap: 8px;
-  position: relative;
 }
 
 .footer-menu li:not(.btn-menu):hover a {
@@ -1239,17 +1341,6 @@ textarea {
 
 .footer-menu li:not(.btn-menu):hover::before {
   background: #99c6d1;
-}
-
-.footer-menu li:not(.btn-menu)::before {
-  content: "";
-  display: block;
-  width: 6px;
-  min-width: 6px;
-  height: 6px;
-  border-radius: 50%;
-  background: #84a4ac;
-  transition: 0.3s;
 }
 
 .footer__item {
@@ -1277,11 +1368,13 @@ textarea {
   margin-top: 25px;
 }
 
-.footer-socials {
+.footer-socials,
+.disorder__socials {
   gap: 10px;
 }
 
-.footer-socials .socials__link {
+.footer-socials .socials__link,
+.disorder__socials .socials__link {
   width: 30px;
   height: 30px;
   display: flex;
@@ -1292,11 +1385,13 @@ textarea {
   transition: 0.3s;
 }
 
-.footer-socials .socials__link:hover {
+.footer-socials .socials__link:hover,
+.disorder__socials .socials__link:hover {
   background: #99c6d1;
 }
 
-.footer-socials .socials__icon {
+.footer-socials .socials__icon,
+.disorder__socials .socials__icon {
   width: 20px;
 }
 
@@ -1327,7 +1422,7 @@ textarea {
   width: -moz-max-content;
   width: max-content;
   font-size: 14px;
-  line-height: 17px;
+  line-height: 1.22;
   padding: 13px 24px;
   cursor: pointer;
   transition: 0.3s;
@@ -1354,6 +1449,120 @@ textarea {
   background: #99c6d1;
   color: #fff;
   border-color: #99c6d1;
+}
+
+.item {
+  display: flex;
+  border-radius: 2px;
+}
+
+.item__info {
+  padding: 30px 30px 30px 50px;
+}
+
+.item__title {
+  color: #99c6d1;
+  font-size: 18px;
+  font-weight: 500;
+  margin-bottom: 15px;
+}
+
+.item__img {
+  max-width: 300px;
+  height: auto;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.main-1 {
+  height: 100vh;
+  padding-top: 200px;
+  padding-bottom: 80px;
+  color: #fff;
+  background: url(../img/bg-first.png), linear-gradient(90deg, #407482 50.52%, rgba(64, 116, 130, 0) 100%);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.main-1 .container {
+  display: flex;
+  flex-wrap: nowrap;
+}
+
+.main-1__title {
+  max-width: 820px;
+}
+
+.main-1__subtitle {
+  color: #fff !important;
+}
+
+.main-1__col-1 {
+  width: 0 1 60%;
+}
+
+.main-1__btns {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.main-1__block {
+  background: rgba(255, 255, 255, 0.3);
+  padding: 50px 30px;
+  text-align: center;
+}
+
+.main-1__sub {
+  display: flex;
+  justify-content: center;
+  gap: 5px;
+  margin-bottom: 10px;
+}
+
+.main-1__sub img {
+  width: 16px;
+  height: auto;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.main-1__table {
+  margin: 20px 0;
+  padding: 15px 0;
+}
+
+.main-1__cl {
+  margin-bottom: 10px;
+  text-align: center;
+}
+
+.main-1__cl:last-child {
+  margin-bottom: 0;
+}
+
+.main-1__link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 18px;
+  gap: 5px;
+}
+
+.main-1__line {
+  width: 176px;
+  height: 1px;
+  background: #fff;
+}
+
+.main-2.container {
+  max-width: 1280px;
+}
+
+.main-2__grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 40px;
 }
 
 .price__row {
@@ -1391,6 +1600,194 @@ textarea {
 
 .price__notion {
   color: #333;
+}
+
+.disorder__row {
+  display: flex;
+  gap: 40px;
+}
+
+.disorder__left {
+  flex: 0 1 20%;
+}
+
+.disorder__note {
+  flex: 0 1 80%;
+  padding: 20px 30px;
+  border: 1px solid #dddddd;
+}
+
+.disorder__note iframe {
+  margin: 30px 0;
+}
+
+.disorder__note p {
+  margin-bottom: 20px;
+  margin-top: 0;
+}
+
+.disorder__note p:last-child {
+  margin-bottom: 0;
+}
+
+.disorder__item,
+.disorder__spec {
+  margin-bottom: 20px;
+}
+
+.disorder__item:last-child,
+.disorder__spec:last-child {
+  margin-bottom: 0;
+}
+
+.disorder__item span,
+.disorder__spec span {
+  display: block;
+  font-family: "Manrope", sans-serif;
+  font-weight: 700;
+  color: #607d8b;
+}
+
+.disorder__author {
+  color: #000;
+  margin-bottom: 10px;
+}
+
+.disorder__img {
+  margin-bottom: 20px;
+}
+
+.disorder__name,
+.disorder__specialization {
+  font-family: "Manrope", sans-serif;
+  font-weight: 700;
+  color: #000;
+}
+
+.disorder__specialization {
+  margin-bottom: 30px;
+}
+
+.disorder__spec span {
+  margin-bottom: 10px;
+}
+
+.disorder__spec span:last-child {
+  margin-bottom: 0;
+}
+
+.disorder__name {
+  font-size: 20px;
+  margin-bottom: 5px;
+}
+
+.disorder__share {
+  margin-top: 70px;
+}
+
+.disorder__share-title {
+  color: #000;
+  margin-bottom: 10px;
+}
+
+.about-1 {
+  background-image: url(https://cnpp.ru/wp-content/uploads/2019/03/-%D1%86%D0%B5%D0%BD%D1%82%D1%80%D0%B5-e1553274224907.jpg);
+}
+
+.about-2__row {
+  display: flex;
+}
+
+.about-2__row:nth-child(2n+1) .about-2__col-1 {
+  padding: 0 40px 30px 0;
+}
+
+.about-2__row:nth-child(2n) .about-2__col-1 {
+  order: 2;
+  padding: 30px 0 0 40px;
+}
+
+.about-2__row:nth-child(2n) .about-2__col-2 {
+  order: 1;
+}
+
+.about-2__col {
+  flex: 0 1 50%;
+}
+
+.about-2__title {
+  color: #607d8b;
+  margin-bottom: 20px;
+}
+
+.about-2__text p {
+  margin: 0;
+}
+
+.about-2__text > div {
+  margin-bottom: 20px;
+}
+
+.about-2__text > div:last-child {
+  margin-bottom: 0;
+}
+
+.infographics {
+  display: flex;
+  color: #fff;
+}
+
+.infographics__item {
+  flex: 0 1 25%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+  cursor: default;
+  padding: 40px 22px;
+  transition: transform 0.35s;
+}
+
+.infographics__item_1 {
+  background: #97bbc5;
+}
+
+.infographics__item_2 {
+  background: #83abb6;
+}
+
+.infographics__item_3 {
+  background: #7fa4ae;
+}
+
+.infographics__item_4 {
+  background: #7597a7;
+}
+
+.infographics .counter {
+  font-size: 50px;
+  line-height: 1;
+}
+
+.infographics__number {
+  display: flex;
+  align-items: flex-end;
+  gap: 8px;
+  margin-bottom: 10px;
+}
+
+.infographics__number span {
+  margin-bottom: 5px;
+}
+
+.infographics__title {
+  font-size: 22px;
+  max-width: 230px;
+}
+
+.departments-1 {
+  background-image: url(https://cnpp.ru/wp-content/uploads/2016/01/header-image-departments.jpg);
 }
 
 /**
@@ -2145,6 +2542,10 @@ button.swiper-pagination-bullet {
 }
 
 @media (max-width: 991px) {
+  .first-template {
+    height: calc(100vh - 135.2px);
+  }
+
   .header__row-2 {
     display: block;
     position: fixed;
@@ -2173,11 +2574,50 @@ button.swiper-pagination-bullet {
   .price__row {
     grid-template-columns: repeat(3, 1fr);
   }
+
+  .about-2__row {
+    flex-direction: column;
+  }
+
+  .about-2__row:first-child .about-2__col-1 {
+    padding-top: 0 !important;
+  }
+
+  .about-2__row:nth-child(2n) .about-2__col-1 {
+    order: 1;
+  }
+
+  .about-2__row:nth-child(2n) .about-2__col-2 {
+    order: 2;
+  }
+
+  .about-2__col-1 {
+    padding: 30px 0 !important;
+  }
+
+  .about-2__col-2 {
+    margin: 0 -20px;
+  }
+
+  .about-2__col-2 img {
+    width: 100%;
+    height: auto;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+
+  .infographics {
+    flex-direction: column;
+  }
 }
 
 @media (max-width: 767px) {
   .container {
     padding: 0 15px;
+  }
+
+  .title.title-h1 {
+    font-size: 38px;
   }
 
   .title.title-h2 {
@@ -2232,8 +2672,56 @@ button.swiper-pagination-bullet {
     display: none;
   }
 
+  .main-1 {
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
+
+  .main-1 .container {
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+
   .price__row {
     grid-template-columns: repeat(2, 1fr);
+  }
+
+  .disorder__row {
+    flex-direction: column;
+    gap: 20px;
+  }
+
+  .disorder__left {
+    order: 2;
+  }
+
+  .disorder__card {
+    max-width: 320px;
+    font-size: 14px;
+    padding: 10px;
+    border: 1px solid #dddddd;
+  }
+
+  .disorder__note {
+    order: 1;
+  }
+
+  .disorder__item,
+  .disorder__spec {
+    margin-bottom: 10px;
+  }
+
+  .disorder__img {
+    width: 240px;
+    height: auto;
+  }
+
+  .disorder__specialization {
+    margin-bottom: 20px;
+  }
+
+  .disorder__share {
+    margin-top: 30px;
   }
 }
 
