--- a/assets/img/css/sprite.css
+++ b/assets/img/css/sprite.css
@@ -1,5 +1,5 @@
 .svg-arrow {
-	background: url("svg/sprite.css-eda9263a.svg") 100% 0 no-repeat;
+	background: url("svg/sprite.css-82e5e6fc.svg") 85.71428571428571% 44.44444444444444% no-repeat;
 }
 
 .svg-arrow-dims {
@@ -7,12 +7,48 @@
 	height: 9px;
 }
 
+.svg-clock {
+	background: url("svg/sprite.css-82e5e6fc.svg") 55.55555555555556% 0 no-repeat;
+}
+
+.svg-clock-dims {
+	width: 18px;
+	height: 24px;
+}
+
 .svg-telegram {
-	background: url("svg/sprite.css-eda9263a.svg") 0 0 no-repeat;
+	background: url("svg/sprite.css-82e5e6fc.svg") 0 100% no-repeat;
 }
 
 .svg-telegram-dims {
-	width: 512px;
-	height: 512px;
+	width: 23px;
+	height: 22px;
+}
+
+.svg-vk {
+	background: url("svg/sprite.css-82e5e6fc.svg") 0 0 no-repeat;
+}
+
+.svg-vk-dims {
+	width: 30px;
+	height: 20px;
+}
+
+.svg-whatsapp {
+	background: url("svg/sprite.css-82e5e6fc.svg") 100% 0 no-repeat;
+}
+
+.svg-whatsapp-dims {
+	width: 24px;
+	height: 24px;
+}
+
+.svg-youtube {
+	background: url("svg/sprite.css-82e5e6fc.svg") 0 47.61904761904762% no-repeat;
+}
+
+.svg-youtube-dims {
+	width: 27px;
+	height: 21px;
 }
 
