feat: add specialist page

--- a/source/pug/content/disorder-screen.pug
+++ b/source/pug/content/disorder-screen.pug
@@ -27,7 +27,7 @@
             img(src="./assets/img/whatsapp.svg", alt="YouTube").socials__icon
           a(href="https://www.youtube.com/channel/UC9O-RlVMSnHv5o2kL5QciIw" target="_blank").socials__link
             img(src="./assets/img/telegram.svg", alt="YouTube").socials__icon
-    .disorder__note
+    .disorder__note.note
       h1.title.title-h2.disorder__title Депрессия
       p Депрессия – это состояние, которое мешает человеку жить полноценной жизнью. При тяжелых симптомах депрессии человеку может быть сложно выполнять работу, справляться  с домашними, бытовыми обязанностями, следить за гигиеной и вести социальную жизнь.
       <iframe title="YouTube video player 1" src="https://www.youtube.com/embed/CsB81DhEHyA?autoplay=0&amp;enablejsapi=1&amp;wmode=opaque" width="600" height="360" allowfullscreen="" allow="autoplay; fullscreen" id="player_1"></iframe>
