--- a/source/pug/index.pug
+++ b/source/pug/index.pug
@@ -22,6 +22,8 @@
       li
         a(href="departments.html") Наши направления
       li
+        a(href="specialist.html") Специалист
+      li
         a(href="rules.html") Правила получения услуг
 </body>
 </html>
