--- a/source/sass/main.scss
+++ b/source/sass/main.scss
@@ -28,6 +28,7 @@
 @import "pages/disorder";
 @import "pages/about";
 @import "pages/departments";
+@import "pages/specialist";
 
 //Vendors
 @import "vendors/swiper.min";
