--- a/source/sass/abstracts/_general-style.sass
+++ b/source/sass/abstracts/_general-style.sass
@@ -256,3 +256,17 @@ textarea
   &__btn
     font-size: 20px!important
     margin: 0 auto
+
+.note
+  & iframe
+    margin: 30px 0
+  & p
+    margin-bottom: 20px
+    margin-top: 0
+    &:last-child
+      margin-bottom: 0
+
+.hide-desktop
+  display: none
+  @media (max-width: 767px)
+    display: block
